updates, added CUPS to data module

--- a/labs/data_rest/greeting-service-data/src/main/resources/application.yml
+++ b/labs/data_rest/greeting-service-data/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 app:
   greeting: hello, world
 
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+      
 management:
   endpoints:
     web:
