--- a/labs/data_rest/greeting-service-data/manifest.yml
+++ b/labs/data_rest/greeting-service-data/manifest.yml
@@ -4,6 +4,6 @@ applications:
   memory: 1G
   instances: 1
   path: ./target/greeting-service-0.0.1-SNAPSHOT.jar
-#  services:
-#  - greeting-db
+  services:
+  - greeting-db
 
